Media Queries Fixed on iPhone6/7/8

--- a/src/index.css
+++ b/src/index.css
@@ -118,6 +118,28 @@ header h1 {
 	.swal2-popup {
 		font-size: 1rem !important;
 	}
+	.contenido-gasto {
+		flex-wrap: wrap;
+		justify-content: center;
+	}
+	.descripcion-gasto p {
+		display: flex;
+		align-items: center;
+		justify-content: center;
+	}
+	.fecha-gasto {
+		display: flex;
+		flex-wrap: wrap;
+	}
+	.filtros label {
+		font-size: 2rem !important;
+	}
+	.cantidad-gasto {
+		width: 100% !important;
+		display: flex;
+		justify-content: center;
+		align-items: center;
+	}
 	h1 {
 		font-size: 2.5rem;
 	}
@@ -126,9 +148,6 @@ header h1 {
 	}
 	p > span {
 		font-size: 2rem;
-	}
-	.filtros label {
-		font-size: 2rem !important;
 	}
 }
 
